--- a/source/tests/scripts/binary-rewrite-stubs.sh.in
+++ b/source/tests/scripts/binary-rewrite-stubs.sh.in
@@ -5,17 +5,67 @@
 source $(dirname $(basename ${BASH_SOURCE[0]}))/common.sh
 
 TEST_NAME=$(basename ${BASH_SOURCE[0]})
-export TIMEMORY_OUTPUT_PATH=@CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-output
+
+export TIMEMORY_OUTPUT_PATH=@CMAKE_CURRENT_BINARY_DIR@/dynamic/timemory-@TEST_NAME@-output
+export TIMEMORY_OUTPUT_PREFIX="binary-rewrite-stubs"
+export TIMEMORY_TEXT_OUTPUT=ON
+export TIMEMORY_FILE_OUTPUT=ON
+export TIMEMORY_AUTO_OUTPUT=ON
+export TIMEMORY_TREE_OUTPUT=OFF
+export TIMEMORY_JSON_OUTPUT=OFF
+export TIMEMORY_COUT_OUTPUT=ON
+export TIMEMORY_FLAMEGRAPH_OUTPUT=OFF
+
 rm -rf ${TIMEMORY_OUTPUT_PATH}
 
 # add path to libtimemory to LD_LIBRARY_PATH
 export LD_LIBRARY_PATH=@PROJECT_BINARY_DIR@:${LD_LIBRARY_PATH}
 
+emit-separator "Performing binary re-write"
+
 # instrumentation using --stubs mode.
-@PROJECT_BINARY_DIR@/timemory-run --stubs -o @COMMAND@.inst -- @COMMAND@
+@PROJECT_BINARY_DIR@/timemory-run --stubs -o ./@TEST_NAME@.inst -- @COMMAND@
+
+emit-separator "Executing instrumented exe with stub functions"
 
 # run. no instrumentation data since only stubs
-@COMMAND@
+./@TEST_NAME@.inst
+
+emit-separator "Collecting stub results"
+
+WALL_FILE="${TIMEMORY_OUTPUT_PATH}/${TIMEMORY_OUTPUT_PREFIX}-wall.txt"
+
+NORIG=0
+LORIG=""
+if [ -f "${WALL_FILE}" ]; then
+    NORIG=$(count-lines ${WALL_FILE})
+    LORIG=$(cat ${WALL_FILE} | grep '>>>')
+fi
+
+emit-separator "Executing instrumented exe with LD_PRELOAD"
 
 # preload libtimemory and then run again for instrumentation data
-LD_PRELOAD=libtimemory.so @COMMAND@.inst
+LD_PRELOAD=libtimemory.so ./@TEST_NAME@.inst
+
+emit-separator "Analyzing results in ${TIMEMORY_OUTPUT_PATH}"
+
+if [ ! -f "${WALL_FILE}" ]; then
+    echo -e "Missing wall-clock output file: \"${WALL_FILE}\""
+    echo -e "File in ${TIMEMORY_OUTPUT_PATH}:\n$(ls ${TIMEMORY_OUTPUT_PATH})"
+    exit 1
+else
+    NWALL=$(count-lines ${WALL_FILE})
+    if [ "${NWALL}" -eq 0 ]; then
+        echo -e "\nWall-clock results from \"${WALL_FILE}\" were empty:\n"
+        echo -e "$(cat ${WALL_FILE} | grep '>>>')"
+        exit 1
+    fi
+    if [ "${NWALL}" -eq "${NORIG}" ]; then
+        echo -e "\nWall-clock results were originally ${NORIG} lines and they did not change after instrumentation: ${NWALL}:\n"
+        echo -e "\nOriginal output:\n"
+        echo -e "${LORIG}"
+        echo -e "\nInstrumented output:\n"
+        echo -e "$(cat ${WALL_FILE} | grep '>>>')"
+        exit 1
+    fi
+fi
