--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   docker: circleci/docker@1.4.0
 
 jobs:
-  build:
+  user-build:
     docker:
       - image: jrmadsen/timemory:dev-cpu
     steps:
@@ -12,7 +12,7 @@ jobs:
           name: apt-fixes
           command: >
             apt-get update &&
-            apt-get install -y git ssh lcov
+            apt-get install -y git ssh
       - checkout
       - run:
           name: conda-installation
@@ -29,12 +29,64 @@ jobs:
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
-            python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j1
-            --build-libs shared --mpi --papi --gotcha --stats --tools mpip dyninst --cxx-standard=17
+            python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Debug -j 1
+            --quick --build-libs shared --mpi --papi --gotcha --stats --tools mpip dyninst kokkos --cxx-standard=17
             -- -V --output-on-failure
             -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
       - run:
           name: install
           command: >
             cd build-timemory/Linux &&
-            make install -j
+            make install -j &&
+            export CMAKE_PREFIX_PATH=${HOME}/timemory-install:${CMAKE_PREFIX_PATH} &&
+            cd ../../examples &&
+            mkdir build-examples &&
+            cd build-examples &&
+            cmake .. &&
+            make ex_array_of_bundles
+  dev-build:
+    docker:
+      - image: jrmadsen/timemory:dev-cpu
+    steps:
+      - run:
+          name: apt-fixes
+          command: >
+            apt-get update &&
+            apt-get install -y git ssh
+      - checkout
+      - run:
+          name: conda-installation
+          command: >
+            wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ${HOME}/miniconda.sh &&
+            bash ${HOME}/miniconda.sh -b -p ${HOME}/miniconda &&
+            export PATH="${HOME}/miniconda/bin:${PATH}" &&
+            conda config --set always_yes yes --set changeps1 no &&
+            conda create -c defaults -c conda-forge -n pyctest python=3.7.8 pyctest &&
+            source activate pyctest
+      - run:
+          name: build
+          command: >
+            export PATH="${HOME}/miniconda/bin:${PATH}" &&
+            source activate &&
+            conda activate pyctest &&
+            python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j 1
+            --build-libs shared --mpi --papi --gotcha --tools mpip dyninst --cxx-standard=17
+            -- -V --output-on-failure
+            -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
+      - run:
+          name: install
+          command: >
+            cd build-timemory/Linux &&
+            make install -j &&
+            export CMAKE_PREFIX_PATH=${HOME}/timemory-install:${CMAKE_PREFIX_PATH} &&
+            cd ../../examples &&
+            mkdir build-examples &&
+            cd build-examples &&
+            cmake ..
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - user-build
+      - dev-build
