Added missing kokkos functions
- kokkosp_begin_fence
- kokkosp_end_fence
- kokkosp_profile_event

--- a/source/tools/kokkos-connector/kp_timemory.cpp.in
+++ b/source/tools/kokkos-connector/kp_timemory.cpp.in
@@ -44,6 +44,8 @@ struct kp_timemory_parallel_reduce
 {};
 struct kp_timemory_parallel_scan
 {};
+struct kp_timemory_fence
+{};
 struct kp_timemory_region
 {};
 struct kp_timemory_section
@@ -255,6 +257,30 @@ kokkosp_end_parallel_scan(uint64_t kernid)
 //--------------------------------------------------------------------------------------//
 
 extern "C" void
+kokkosp_begin_fence(const char* name, uint32_t devid, uint64_t* kernid)
+{
+    if_constexpr(profile_entry_t::size() > 0)
+    {
+        auto pname = TIMEMORY_JOIN('/', "kokkos", TIMEMORY_JOIN("", "dev", devid), name);
+        *kernid    = get_unique_id();
+        create_profiler(pname, *kernid);
+        start_profiler(*kernid, kp_timemory_fence{}, name, devid);
+    }
+}
+
+extern "C" void
+kokkosp_end_fence(uint64_t kernid)
+{
+    if_constexpr(profile_entry_t::size() > 0)
+    {
+        stop_profiler(kernid);
+        destroy_profiler(kernid);
+    }
+}
+
+//--------------------------------------------------------------------------------------//
+
+extern "C" void
 kokkosp_push_profile_region(const char* name)
 {
     if_constexpr(profile_entry_t::size() > 0)
@@ -312,6 +338,14 @@ extern "C" void
 kokkosp_stop_profile_section(uint32_t secid)
 {
     if_constexpr(profile_entry_t::size() > 0) { stop_profiler(secid); }
+}
+
+//--------------------------------------------------------------------------------------//
+
+extern "C" void
+kokkosp_profile_event(const char* name)
+{
+    profile_entry_t{}.mark(name);
 }
 
 //--------------------------------------------------------------------------------------//
