--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,83 @@ jobs:
   include:
     # ------------------------------------------------------------------------ #
     #
+    #   Quick builds
+    #
+    # ------------------------------------------------------------------------ #
+    # GCC 7
+    - os: linux
+      dist: bionic
+      python: "3.7"
+      addons:
+        apt:
+          packages:
+            - gcc
+            - g++
+            - build-essential
+      env:
+        - CC=gcc
+        - CXX=g++
+        - BUILD_TYPE=Debug
+        - BUILD_ARGS='--quick --build-libs shared static --python --tools timem kokkos --cxx-standard=17'
+    #
+    # GCC 8
+    - os: linux
+      dist: bionic
+      python: "3.8"
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-8
+            - g++-8
+            - build-essential
+            - libopenmpi-dev
+            - openmpi-bin
+            - openmpi-common
+            - libfabric-dev
+      env:
+        - CC=gcc-8
+        - CXX=g++-8
+        - BUILD_TYPE=Debug
+        - BUILD_ARGS='--quick --build-libs shared static --python --mpi --tools compiler --cxx-standard=17'
+    # Clang 6.0
+    - os: linux
+      dist: xenial
+      python: "3.7"
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-xenial-6.0
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang-6.0
+            - clang++-6.0
+            - build-essential
+      env:
+        - CC=clang-6.0
+        - CXX=clang++-6.0
+        - BUILD_TYPE=Debug
+        - BUILD_ARGS='--quick --build-libs shared static --python --stats --tools ompt --cxx-standard=17'
+    # Clang 7
+    - os: linux
+      dist: bionic
+      python: "3.8"
+      addons:
+        apt:
+          packages:
+            - clang-7
+            - clang++-7
+            - build-essential
+            - libmpich-dev
+            - mpich
+      env:
+        - CC=clang-7
+        - CXX=clang++-7
+        - BUILD_TYPE=Debug
+        - BUILD_ARGS='--quick --build-libs shared static --python --mpi --gotcha --caliper --stats --tools mpip --cxx-standard=17'
+    # ------------------------------------------------------------------------ #
+    #
     #   Python 3.6 / Linux
     #
     # ------------------------------------------------------------------------ #
@@ -27,8 +104,8 @@ jobs:
       env:
         - CC=gcc-6
         - CXX=g++-6
-        - BUILD_TYPE=MinSizeRel
-        - BUILD_ARGS='--build-libs shared --gotcha --python --stats --cxx-standard=14 --extra-optimizations'
+        - BUILD_TYPE=Release
+        - BUILD_ARGS='--minimal --build-libs static shared --gotcha --python --stats --cxx-standard=14 --extra-optimizations'
     # GCC 7
     - os: linux
       dist: bionic
@@ -49,7 +126,7 @@ jobs:
       env:
         - CC=gcc-7
         - CXX=g++-7
-        - BUILD_ARGS='--build-libs shared --mpi --papi --caliper --gotcha --tools mpip --stats --cxx-standard=17 --coverage'
+        - BUILD_ARGS='--minimal --build-libs shared --mpi --papi --caliper --gotcha --tools mpip --stats --cxx-standard=17 --coverage'
     #
     # GCC 8
     - os: linux
@@ -67,142 +144,46 @@ jobs:
             - openmpi-bin
             - openmpi-common
             - libfabric-dev
-      env:
-        - CC=gcc-8
-        - CXX=g++-8
-        - BUILD_TYPE=Release
-        - BUILD_ARGS='--build-libs static --mpi --cxx-standard=17'
-    # Clang 6.0
-    - os: linux
-      dist: xenial
-      python: "3.6"
-      addons:
-        apt:
-          sources:
-            - llvm-toolchain-xenial-6.0
-            - ubuntu-toolchain-r-test
-          packages:
-            - clang-6.0
-            - clang++-6.0
-            - build-essential
-      env:
-        - CC=clang-6.0
-        - CXX=clang++-6.0
-        - BUILD_ARGS='--quick --build-libs static --stats --tools timem --cxx-standard=14'
-    # Clang 7
-    - os: linux
-      dist: bionic
-      python: "3.6"
-      addons:
-        apt:
-          packages:
-            - clang-7
-            - clang++-7
-            - build-essential
-      env:
-        - CC=clang-7
-        - CXX=clang++-7
-        - BUILD_ARGS='--quick --build-libs static shared --python --caliper --stats --tools ompt --cxx-standard=14'
-    # ------------------------------------------------------------------------ #
-    #
-    #   Python 3.7 / Linux
-    #
-    # ------------------------------------------------------------------------ #
-    # GCC 6
-    - os: linux
-      dist: xenial
-      python: "3.7"
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - gcc-6
-            - g++-6
-            - build-essential
-            - libpapi-dev
-            - papi-tools
-      env:
-        - CC=gcc-6
-        - CXX=g++-6
-        - BUILD_TYPE=MinSizeRel
-        - BUILD_ARGS='--build-libs shared --papi --python --stats --cxx-standard=14 --extra-optimizations'
-    # GCC 7
-    - os: linux
-      dist: bionic
-      python: "3.7"
-      addons:
-        apt:
-          packages:
-            - gcc
-            - g++
-            - build-essential
-            - libpapi-dev
-            - papi-tools
-      env:
-        - CC=gcc
-        - CXX=g++
-        - BUILD_TYPE=Debug
-        - BUILD_ARGS='--quick --build-libs static --papi --cxx-standard=14'
-    #
-    # GCC 8
-    - os: linux
-      dist: bionic
-      python: "3.7"
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - gcc-8
-            - g++-8
-            - build-essential
-            - libopenmpi-dev
-            - openmpi-bin
-            - openmpi-common
-            - libfabric-dev
-      env:
-        - CC=gcc-8
-        - CXX=g++-8
-        - BUILD_TYPE=Release
-        - BUILD_ARGS='--build-libs shared --mpi --cxx-standard=17'
-    # Clang 6.0
-    - os: linux
-      dist: xenial
-      python: "3.7"
-      addons:
-        apt:
-          sources:
-            - llvm-toolchain-xenial-6.0
-            - ubuntu-toolchain-r-test
-          packages:
-            - clang-6.0
-            - clang++-6.0
-            - build-essential
             - graphviz
             - libgoogle-perftools-dev
             - google-perftools
       env:
+        - CC=gcc-8
+        - CXX=g++-8
+        - BUILD_TYPE=RelWithDebInfo
+        - BUILD_ARGS='--build-libs shared --mpi --gperftools --stats --profile=cpu --tools compiler --cxx-standard=17'
+    # Clang 6.0
+    - os: linux
+      dist: xenial
+      python: "3.7"
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-xenial-6.0
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang-6.0
+            - clang++-6.0
+            - build-essential
+      env:
         - CC=clang-6.0
         - CXX=clang++-6.0
-        - BUILD_ARGS='--build-libs shared --gperftools --stats --cxx-standard=14 --profile=cpu'
-        - CMAKE_ARGS='-DTIMEMORY_USE_PYTHON=OFF'
+        - BUILD_TYPE=MinSizeRel
+        - BUILD_ARGS='--minimal --build-libs static --stats --tools timem --cxx-standard=14'
     # Clang 7
     - os: linux
       dist: bionic
-      python: "3.7"
+      python: "3.8"
       addons:
         apt:
           packages:
             - clang-7
             - clang++-7
             - build-essential
-            - libmpich-dev
-            - mpich
       env:
         - CC=clang-7
         - CXX=clang++-7
-        - BUILD_ARGS='--quick --build-libs shared --gotcha --mpi --python --stats --tools compiler kokkos --cxx-standard=17'
+        - BUILD_ARGS='--minimal --build-libs static shared --python --caliper --stats --tools ompt --cxx-standard=14'
     # ------------------------------------------------------------------------ #
     #
     #   Python3.8 / macOS
@@ -217,8 +198,7 @@ jobs:
         - CC=clang
         - CXX=clang++
         - CMAKE_ARGS='-DTIMEMORY_BUILD_PYTHON_LINE_PROFILER=OFF'
-        - CTEST_ARGS='--force-new-ctest-process'
-        - BUILD_ARGS='--quick --build-libs shared --python --cxx-standard=17'
+        - BUILD_ARGS='--minimal --build-libs shared --python --cxx-standard=17'
 
 before_install:
   # only run macOS if a pull-request
@@ -231,7 +211,7 @@ before_install:
   - if [ "${EXECUTE}" -ne 0 ]; then conda config --set always_yes yes --set changeps1 no; fi
 
 install:
-  - if [ "${EXECUTE}" -ne 0 ]; then conda create -c conda-forge -c defaults -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake numpy matplotlib pillow pip cython pydot pandas; fi
+  - if [ "${EXECUTE}" -ne 0 ]; then conda create -c defaults -c conda-forge -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake numpy matplotlib pillow pip cython pydot pandas; fi
   - if [ "${EXECUTE}" -ne 0 ]; then source activate pyctest; fi
   - if [ "${EXECUTE}" -ne 0 ]; then if [ -n "$(which mpicc)" ]; then python -m pip install mpi4py; fi; fi
 
